--- a/hotel/visitor/templates/base.html
+++ b/hotel/visitor/templates/base.html
@@ -33,8 +33,8 @@
     <a class="nav-link" href="#">Reviews</a>
   </li>
 
-<a class="nav-item nav-link" type='pull-right' href="{% url 'logout' %}">Logout</a>
- <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+<a class="nav-item nav-link" type='pull-right' href="{% url 'visitor:logout' %}">Logout</a>
+ <a class="nav-item nav-link" href="{% url 'visitor:login' %}">Login</a>
 
 </ul>
 
