--- a/hotel/visitor/templates/registration/login.html
+++ b/hotel/visitor/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Pastebin Login{% endblock %}
+{% block title %}Login{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 	<div class="container">
@@ -8,7 +8,7 @@
 			<div class="col-8">
 			
 				<form method="POST">
-					{%csrf_token%}
+					{% csrf_token %}
 					{{form | crispy}}
 					<button type="submit" class="btn btn-outline-dark">submit</button>
 				</form>
