--- a/hotel/visitor/templates/visitor.html
+++ b/hotel/visitor/templates/visitor.html
@@ -1,20 +1,26 @@
 {% extends 'base.html' %}
-{% block title %}Visitor welcome{% endblock %}
+
 {% block content %}
 
- <div class="jumbotron">
-  <h1>Wecome to Torquay Towers</h1>
-  <p>Bok a spot at our bautifull hotel!</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+<h1 class="h1">Torqe Towers</h1>
+
+
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">The hotel</h5>
+    <h6 class="card-subtitle mb-2 text-muted"></h6>
+
+  <p class="text1"> The Hotel Hesperia is the right choice for visitors who are searching for a combination of charm, peace and quiet, and a convenient position from which to explore Venice. It is a small, comfortable hotel, situated on the Canale di Cannaregio. The Derai family and their staff offer an attentive, personalized service and are always available to offer any help to guests.
+</p>
+
+
+  </div>
 </div>
+<div>
 
-
-<div class="container">
-
-    <h1>Wecome to Torquay Towers</h1>
-
-
-  <div class="row">
+	
+</div>
+	
 
 {% endblock %}
-	
