--- a/hotel/visitor/templates/index.html
+++ b/hotel/visitor/templates/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -16,13 +15,32 @@
 
   <body class="body">
 
-<a href="something" class="button7">The Hotel</a>
-<a href="something" class="button8">Reserve</a>
-<a href="something" class="button9">Reviews</a>
-<a href="something" class="button10">Login</a>
-<a href="something" class="button11">Signup</a>
+<h1 class="h1">Torqe Towers</h1>
 
-{% block content %}{% endblock %}
+<a href="something" class="button2">The Hotel</a>
+<a href="something" class="button3">Reserve</a>
+<a href="something" class="button4">Reviews</a>
+<a href="something" class="button5">Login</a>
+<a href="something" class="button6">Signup</a>
+
+
+
+
+
+
+
+
+<img src="https://static01.nyt.com/images/2018/08/19/travel/19FAVORITESweb/merlin_142322145_42350a68-2503-4c8a-ba36-69c29999884b-articleLarge.jpg?quality=75&auto=webp&disable=upscale" class="image" alt="Girl in a jacket">
+
+
+
+
+
+
+
 
   </body>
 </html>
+
+
+
