--- a/hotel/visitor/templates/hotel.html
+++ b/hotel/visitor/templates/hotel.html
@@ -2,16 +2,17 @@
 
 {% block content %}
 
-<h1 class="h1">Torqe Towers</h1>
-
-
+<br>
 
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">The hotel</h5>
     <h6 class="card-subtitle mb-2 text-muted"></h6>
+    <br>
+    
+    
 
-  <p class="text1"> The Hotel Hesperia is the right choice for visitors who are searching for a combination of charm, peace and quiet, and a convenient position from which to explore Venice. It is a small, comfortable hotel, situated on the Canale di Cannaregio. The Derai family and their staff offer an attentive, personalized service and are always available to offer any help to guests.
+  <p class="text1"> Torqe Towers is the right choice for visitors who are searching for a combination of charm, peace and quiet, and a convenient position from which to explore Venice. It is a small, comfortable hotel, situated on the Canale di Cannaregio. The Derai family and their staff offer an attentive, personalized service and are always available to offer any help to guests.
 </p>
 
 
