--- a/hotel/visitor/templates/index.html
+++ b/hotel/visitor/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <title>Welcome visitor</title>
   </head>
@@ -17,14 +18,16 @@
 
 <h1 class="h1">Torqe Towers</h1>
 
-<a href="something" class="button2">The Hotel</a>
+<a href="http://127.0.0.1:8000/hotel/" class="button2">The Hotel</a>
 <a href="something" class="button3">Reserve</a>
 <a href="something" class="button4">Reviews</a>
-<a href="something" class="button5">Login</a>
+{% if not request.user.is_authenticated %}
+<a href="{% url 'visitor:login' %}" class="button5">Login</a>
 <a href="something" class="button6">Signup</a>
+{% else %}
+<a href="{% url 'visitor:logout' %}" class="button5">Logout</a>
 
-
-
+      {% endif %}
 
 
 
