--- a/hotel/visitor/templates/hotel.html
+++ b/hotel/visitor/templates/hotel.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-
+{% block title %}Welcome Visitor{% endblock %}
 {% block content %}
 
 <br>
 
-<div class="card" style="width: 18rem;">
+<div class="card card1" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">The hotel</h5>
     <h6 class="card-subtitle mb-2 text-muted"></h6>
