--- a/hotel/visitor/templates/add_review.html
+++ b/hotel/visitor/templates/add_review.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Add Review{% endblock %}
+{% block title %}{{title}}{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 
@@ -8,7 +8,7 @@
 		<div class="row">
 			<div class="col-4"></div>
 			<div class="col-4">
-			<h1>Add a review</h1>
+			<h1>{{title}}</h1>
 				<form method="POST">
 					{% csrf_token %}
 					{{form | crispy}}
