--- a/hotel/visitor/templates/base.html
+++ b/hotel/visitor/templates/base.html
@@ -10,25 +10,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
-    <title>Welcome visitor</title>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <title>{% block title %}{% endblock %}</title>
   </head>
 
   <body class="body">
 
-<a href="http://127.0.0.1:8000/hotel/" class="button7">The Hotel</a>
-<a href="something" class="button8">Reserve</a>
-<a href="something" class="button9">Reviews</a>
+<nav class="navbar ">
+<a href="{% url 'visitor:hotel' %}" class="button7">The Hotel</a>
+<a href="" class="button8">Reserve</a>
+<a href="{% url 'visitor:reviews' %}" class="button9">Reviews</a>
 
 {% if not request.user.is_authenticated %}
 
-<a href="http://127.0.0.1:8000/login/" class="button10">Login</a>
-<a href="http://127.0.0.1:8000/signup/" class="button11">Signup</a>
+<a href="{% url 'visitor:login' %}" class="button10">Login</a>
+<a href="{% url 'visitor:signup' %}" class="button11">Signup</a>
 
 {% else %}
 <a href="{% url 'visitor:logout' %}" class="button5">Logout</a>
 
       {% endif %}
+  
+</nav>
+
 
 <br>
 <br>
