--- a/hotel/visitor/templates/reviews.html
+++ b/hotel/visitor/templates/reviews.html
@@ -1,37 +1,32 @@
 {% extends 'base.html' %}
-
+{% block title %}{{title}}{% endblock %}
 {% block content %}
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<container class="container">
-
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
+  <div class="container">
+    <div class="row">
+      <h1 class="col-6 search-title">{{title}}</h1>
+      <div class="col-5"></div>
+      {% if request.user.is_authenticated %}
+      <div class="col-1">
+      <a class=" btn btn-success" href="{% url 'visitor:add_review' %}">Add a Review</a>
+      </div>
+      {% endif %}
+      </div>
+    <div class="row">
+      {% for review in reviews %}
+        <div class="col-12 mt-3">
+          <div class="card">
+            <div class="card-header">
+              {{review.title}}
+            </div>
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p>{{review.content | truncatechars:100}}</p>
+              <footer class="blockquote-footer"><a href="{% url 'visitor:user_reviews' review.user.id %}">{{review.user.first_name}} {{review.user.last_name}}</a>, <cite title="Source Title">{{review.timestamp | timesince}}</cite></footer><a href="{% url 'visitor:review' review.id%}" class="btn btn-sm btn-success float-right">See Review</a>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
-</container>
-
-
 {% endblock %}
